# django-assert-model-queries

./: CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  release.yml
src/django_assert_model_queries/: __init__.py  patch.py  pytest.py  test.py
tests/: settings.py  test_django.py  test_integration.py  test_pytest.py
tests/testapp/: models.py
